# yandex_reviews-parser

./: .gitignore  README.md  helpers.py  main.py  parsers.py  pyproject.toml  requirements.txt  storage.py
src/: helpers.py  main.py  parsers.py  storage.py  utils.py
src/tests/: test_helpers.py
yandex_reviews_parser/: main.py  parsers.py  utils.py
yandex_reviews_parser/tests/: test_helpers.py
