[tool.poetry]
name = "yandex-reviews-parser"
version = "0.1.5"
description = "Python yandex company reviews parser"
authors = ["Daniil <danil16m@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = 'https://github.com/useless-apple/yandex_reviews-parser'
keywords = ["python", "yandex", "parser", "reviews"]

packages = [
    { include = "yandex_reviews_parser"}
]

[tool.poetry.dependencies]
python = "^3.9"
undetected-chromedriver = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
